--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">Factory overhaul</string>
+    <string name="aliyun_no_import_moudle">当前不包含导入模块</string>
+    <string name="aliyun_no_free_memory">剩余磁盘空间不足</string>
+    <string name="aliyun_filter_null">原片</string>
+    <string name="aliyun_camera_permission_tip">请开启摄像头/存储权限</string>
+    <string name="aliyun_record_resolution_360p">360p</string>
+    <string name="aliyun_record_resolution_480p">480p</string>
+    <string name="aliyun_record_resolution_540p">540p</string>
+    <string name="aliyun_record_resolution_720p">720p</string>
+    <string name="aliyun_video_quality_median">中</string>
+    <string name="aliyun_video_quality_high">高</string>
+    <string name="aliyun_video_quality_super">极高</string>
+    <string name="aliyun_crop_ratio_1_1">1:1</string>
+    <string name="aliyun_crop_ratio_9_16">9:16</string>
+    <string name="aliyun_crop_ratio_3_4">3:4</string>
+    <string name="aliyun_start_record">启动录制界面</string>
+    <string name="alivc_record_setting">录制设置</string>
+    <string name="aliyun_min_record_duration">最小时长</string>
+    <string name="aliyun_max_record_duration">最大时长</string>
+    <string name="aliyun_min_record_duration_hint">最小时长大于0，默认值2S</string>
+    <string name="aliyun_record_duration_error_hint">最小时长不能大于最大时长</string>
+    <string name="aliyun_record_duration_min_error_hint">最小时长不能为0</string>
+    <string name="aliyun_record_duration_max_error_hint">最大时长不能超过300s</string>
+    <string name="aliyun_max_record_duration_hint">不超过300S，默认值15S</string>
 </resources>
